--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 
 # Habilitar la consola de H2
 spring.h2.console.enabled=true
+spring.h2.console.path=/miConsolaH2
 
 #Parámetros para conectarnos a la base de datos
 spring.datasource.url=jdbc:h2:mem:dbSecurityJWT;NON_KEYWORDS=user
